# praxis-v1

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  praxis_gui.py  pyproject.toml  run.py  run.py.bak_indent
.github/workflows/: ci.yml
agentkit/agents/: controller.yaml  generator.yaml  planner.yaml  verifier.yaml
docs/: praxis_plan.md
evals/: run_local.py
evals/cases/: release_ready.yaml
openai_evals/evals/: praxis_gate_release_ready.yaml  praxis_gate_smoke.yaml
praxis_agents/: controller.py  generator.py  planner.py  verifier.py
praxis_evals/cases/: smoke.yaml
praxis_runs/: run_20251227_184754_6c8e81b.json  run_20251227_185007_6c8e81b.json  run_20251227_185416_6c8e81b.json  run_20251227_185459_6c8e81b.json  run_20251227_185522_6c8e81b.json  run_20251227_185547_6c8e81b.json  run_20251227_190338_6c8e81b.json  run_20251227_190403_6c8e81b.json  run_20251227_190425_6c8e81b.json  run_20251227_190604_6c8e81b.json  run_20251227_190627_6c8e81b.json
scripts/: build_synthetic_dataset.py  configure_env.py
src/praxis_agentkit/: cli.py  config.py
src/praxis_core/: claims.py  dataset.py  evidence_store.py  generator_stub.py  numeric_agreement.py  release.py  run_artifacts.py  verification.py
src/praxis_eval/: adapters.py  harness.py  harness_cli.py  metrics.py  openai_gate_eval.py
src/praxis_synth/: finance.py
tests/: conftest.py  test_claims.py  test_csv_evidence_store.py  test_dataset_evidence_store.py  test_metrics.py  test_numeric_agreement.py  test_release.py  test_verification.py
