[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
synth = [
  "numpy>=1.26",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["praxis_synth*"]
